--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/baguette-pizza.html">Baguette Pizza</a>
+    <ul>
+        <li>
+        <a href="./recipes/waffle-egg.html">Waffle Egg</a>
+        </li>
+        <li>
+        <a href="./recipes/baguette-pizza.html">Baguette Pizza</a>
+        </li>
+    </ul>
+    
 </body>
 </html>
