Add hotdog.html and content and image

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <li>
         <a href="./recipes/baguette-pizza.html">Baguette Pizza</a>
         </li>
+        <li>
+        <a href="./recipes/hotdog.html">Hotdog</a>
+        </li>
     </ul>
     
 </body>
