Update image size in recipes and correct typos
Corrected typo in height and width of images in recipes and updated the image size in the recipes.

--- a/recipes/baguette-pizza.html
+++ b/recipes/baguette-pizza.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Baguette Pizza</h1>
-    <img src="../images/pizza.webp" alt="Baguette Pizza" hieght="300" width="300">
+    <img src="../images/pizza.webp" alt="Baguette Pizza" height="463" width="750">
     <h2>Description</h2>
     <p>Baguette pizza is a quick and easy way to make homemade pizza. It's a great way to use up leftover baguettes and you can top it with whatever you like.</p>
     <h2>Ingredients</h2>
