--- a/recipes/hotdog.html
+++ b/recipes/hotdog.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Basic Air Fryer Hot Dogs</h1>
-    <img src="../images/hotdog.webp" alt="Waffle egg in hole" hieght="300" width="300">
+    <img src="../images/hotdog.webp" alt="Waffle egg in hole" height="563" width="750">
     <h2>Description</h2>
     <p>These air fryer hot dogs in toasted buns turn out perfectly crisp in minutes with the help of your air fryer. Top with ketchup, mustard, relish, chili, or condiments of choice.</p>
     <h2>Ingredients</h2>
