--- a/recipes/waffle-egg.html
+++ b/recipes/waffle-egg.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Air Fryer Waffle Egg in a Hole</h1>
-    <img src="../images/waffle.webp" alt="Waffle egg in hole" hieght="300" width="300">
+    <img src="../images/waffle.webp" alt="Waffle egg in hole" height="563" width="750">
     <h2>Description</h2>
     <p>Classic egg in a hole is made inside a waffle for a sweet, buttery flavor and added crunch.</p>
     <h2>Ingredients</h2>
