Added styles to each recipe page and index.html
modified:   index.html
modified:   recipes/baguette-pizza.html
modified:   recipes/hotdog.html
modified:   recipes/waffle-egg.html
modified:   styles.css

--- a/recipes/waffle-egg.html
+++ b/recipes/waffle-egg.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Air Fryer Waffle Egg in a Hole</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
     <h2>Description</h2>
     <p>Classic egg in a hole is made inside a waffle for a sweet, buttery flavor and added crunch.</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="unordered-list">
         <li>1 frozen waffle</li>
         <li>1 large egg</li>
         <li>salt and pepper to taste</li>
