--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul id="main-menu">
         <li>
         <a href="./recipes/waffle-egg.html">Waffle Egg</a>
         </li>
