--- a/recipes/baguette-pizza.html
+++ b/recipes/baguette-pizza.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Bagguette Pizza</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
     <h2>Description</h2>
     <p>Baguette pizza is a quick and easy way to make homemade pizza. It's a great way to use up leftover baguettes and you can top it with whatever you like.</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="unordered-list">
         <li>1 French baguette</li>
         <li>1/2 cup pizza sauce</li>
         <li>2/3 cup shredded mozzarella cheese</li>
