--- a/recipes/hotdog.html
+++ b/recipes/hotdog.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Basic Air Fryer Hot Dogs</title>
 </head>
 <body>
@@ -11,7 +12,7 @@
     <h2>Description</h2>
     <p>These air fryer hot dogs in toasted buns turn out perfectly crisp in minutes with the help of your air fryer. Top with ketchup, mustard, relish, chili, or condiments of choice.</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="unordered-list">
         <li>4 hot dog buns</li>
         <li>4 hot dog sausages</li>
                
